Complete DCPMon DDS integration
