# java/opendcs/src/main/java/org/opendcs/lrgs/http/dto/DcpMsg.java
@@ -1,8 +1,0 @@
-package org.opendcs.lrgs.http.dto;
-
-import java.time.ZonedDateTime;
-
-public record DcpMsg(String id, DataSource dataSource, ZonedDateTime retrievedTime, String msg)
-{
-
-}
